# bmo-learning-platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE-OVERVIEW.md  COMPLETENESS-REVIEW.md  DEPLOYMENT-READINESS.md  DOCUMENTATION-INDEX.md  IMPLEMENTATION-COMPLETE.md  PROJECT-STATUS.md  README.md  TESTING-SUMMARY.md  docker-compose.localstack.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: python-tests.yml  rails-tests.yml  security.yml
app/ai_service/: Dockerfile  ENGINEERING-REVIEW.md  README.md  TEST-REVIEW-SUMMARY.md  VALIDATION-RESULTS.md  pyproject.toml  pytest.ini
app/ai_service/agents/: learning_orchestrator.py  memory_manager.py  tools.py
app/ai_service/app/: main.py
app/ai_service/app/api/: agent_routes.py  deps.py  routes.py
app/ai_service/app/config/: settings.py
app/ai_service/app/generators/: lesson_generator.py
app/ai_service/app/ingestion/: document_processor.py  s3_document_loader.py  vector_store.py
app/ai_service/app/safety/: safety_validator.py
app/ai_service/app/storage/: s3_client.py
app/ai_service/app/utils/: logging.py
app/ai_service/config/: settings.py
app/ai_service/generators/: lesson_generator.py
app/ai_service/ingestion/: document_processor.py  vector_store.py
app/ai_service/retrievers/: basic_retriever.py
app/ai_service/safety/: safety_validator.py
app/ai_service/tests/: __init__.py  conftest.py  test_agent_routes.py  test_agent_tools.py  test_api_routes.py  test_document_processor.py  test_document_s3_integration.py  test_learning_orchestrator.py  test_lesson_generator.py  test_memory_manager.py  test_s3_integration.py  test_safety_validator.py  test_settings.py  test_vector_store.py
app/rails_api/: Dockerfile  Gemfile  README.md
app/rails_api/config/: application.rb  boot.rb  database.yml  puma.rb  (+2 more)
docs/: AGENT-IMPLEMENTATION-SUMMARY.md  AGENT-TESTING-REVIEW.md  COST-OPTIMIZATION-SUMMARY.md  COST-OPTIMIZATIONS-IMPLEMENTED.md  DEPLOYMENT-PREPARATION-STATUS.md  DEPLOYMENT-READINESS.md  GETTING-STARTED.md  PROJECT-STATUS.md  TERRAFORM-ANTHROPIC-UPDATE-COMPLETE.md  TERRAFORM-UPDATES-ANTHROPIC.md  ULTRA-LOW-COST-AWS-OPTIMIZATION.md  VERSION-INFO.md
docs/adrs/: 000-template.md  001-use-langchain.md
docs/architecture/: AI-SERVICE-ENDPOINT-IMPLEMENTATION.md  ARCHITECTURAL-REVIEW-FIXES.md  FINAL-API-ROUTES-SUCCESS.md  overview.md
docs/deployment/: AWS-DEPLOYMENT-GUIDE.md  DEPLOYMENT-SUMMARY.md  TERRAFORM-DEPLOYMENT-GUIDE.md
docs/reports/: LOCALSTACK-IMPLEMENTATION-SUMMARY.md  PHASE-5-RAILS-S3-INTEGRATION-SUMMARY.md  PHASE-6-CICD-INTEGRATION-SUMMARY.md  PHASE1-STATUS.md  SESSION-3-PROGRESS.md  SESSION-4-FINAL-RESULTS.md  SESSION-5-RESULTS.md
docs/security/: SECURITY.md  incident-response.md  penetration-testing.md
docs/testing/: FINAL-TEST-RESULTS.md  LOCALSTACK-QUICK-START.md  PHASE-5-VERIFICATION-RESULTS.md  PYTHON-TEST-FIXES-SUMMARY.md  TEST-FIXES-APPLIED.md  TEST-REVIEW-SUMMARY.md  TESTING-IMPLEMENTATION-PLAN.md
docs/workplans/: 00-MASTER-WORKPLAN.md  01-foundation-setup.md  02-langchain-service.md  03-rails-api.md  05-infrastructure.md  06-security-compliance.md  07-agents.md  08-deployment-readiness.md  README.md
ml_pipeline/evaluation/: model_evaluator.py
ml_pipeline/training/: engagement_predictor.py
scripts/: dev-setup.sh  localstack-health-check.sh  localstack-init.sh  localstack-verify-resources.sh  verify-phase5.sh
(+57 files in other folders)
